--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <h2 id="services">Our Services</h2>
         <div class="services">
             <div class="card">
-                <img src="https://images.unsplash.com/photo-1615572768231-5e564d1c71e3" alt="Cargo Truck" />
+                <img src="file_00000000338861f7964fbc7ac81326df.png" alt="Cargo Truck" />
                 <h3>All Types of Cargo</h3>
                 <p>We transport all kinds of goods safely and on time, whether local or long-distance.</p>
             </div>
