--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <!-- Contact Section -->
     <section class="contact" id="contact">
         <h2>Contact Us</h2>
-        <p><strong>Phone:</strong> 082 584 7254</p>
+        <p><strong>Phone:</strong> 082 584 7254/072 920 3848</p>
         <p><strong>Email:</strong> louisfivaz.personal@gmail.com</p>
         <a href="https://wa.me/27825847254" target="_blank" class="btn">💬 WhatsApp Us</a>
         <a href="tel:0825847254" class="btn">📞 Call Us</a>
