--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 <p>We ensure your cargo reaches its destination fast and without delays.</p>
             </div>
             <div class="card">
-                <img src="https://images.unsplash.com/photo-1604145559206-2c0dc1b7d18f" alt="Truck Trailer" />
+                <img src="Snapchat-864956916.jpg" alt="Truck Trailer" />
                 <h3>Professional Service</h3>
                 <p>With years of experience, LG Transport guarantees safe, secure, and affordable deliveries.</p>
             </div>
