--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <!-- Header -->
     <header>
-        <h1>LG Transport</h1>
+        <h1 class="logo">🚛 LG Transport</h1>
         <nav>
             <a href="#services">Services</a>
             <a href="#contact">Contact</a>
@@ -19,6 +19,8 @@
     <!-- Hero Section -->
     <section class="hero">
         <h2>Fast, Reliable & Affordable Transport Solutions</h2>
+        <p>Your cargo, our responsibility.</p>
+        <a href="#contact" class="btn-primary">Contact Us</a>
     </section>
 
     <!-- Services Section -->
@@ -46,10 +48,12 @@
     <!-- Contact Section -->
     <section class="contact" id="contact">
         <h2>Contact Us</h2>
-        <p><strong>Phone:</strong> 082 584 7254/076 920 3848</p>
+        <p><strong>Phone:</strong> 082 584 7254 / 076 920 3848</p>
         <p><strong>Email:</strong> louisfivaz.personal@gmail.com</p>
-        <a href="https://wa.me/27825847254" target="_blank" class="btn">💬 WhatsApp Us</a>
-        <a href="tel:0825847254" class="btn">📞 Call Us</a>
+        <div class="contact-buttons">
+            <a href="https://wa.me/27825847254" target="_blank" class="btn">💬 WhatsApp Us</a>
+            <a href="tel:0825847254" class="btn">📞 Call Us</a>
+        </div>
     </section>
 
     <!-- Footer -->
