--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <!-- Header -->
     <header>
-        <h1 class="logo">🚛 LG Transport</h1>
+        <h1 class="logo">LG Transport</h1>
         <nav>
             <a href="#services">Services</a>
             <a href="#contact">Contact</a>
