--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>LG Transport</title>
     <link rel="stylesheet" href="style.css" />
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
 </head>
 <body>
     <!-- Header -->
     <header>
-        <h1 class="logo">LG Transport</h1>
+        <h1>🚛 LG Transport</h1>
         <nav>
             <a href="#services">Services</a>
             <a href="#contact">Contact</a>
@@ -19,8 +20,8 @@
     <!-- Hero Section -->
     <section class="hero">
         <h2>Fast, Reliable & Affordable Transport Solutions</h2>
-        <p>Your cargo, our responsibility.</p>
-        <a href="#contact" class="btn-primary">Contact Us</a>
+        <p>We deliver excellence — your cargo, our responsibility.</p>
+        <a href="#contact" class="btn hero-btn">Get a Free Quote</a>
     </section>
 
     <!-- Services Section -->
@@ -33,7 +34,7 @@
                 <p>We transport all kinds of goods safely and on time, whether local or long-distance.</p>
             </div>
             <div class="card">
-                <img src="20250821_144753-COLLAGE.jpg" alt="Logistics" />
+                <img src="Snapchat-1218481523.jpg" alt="Logistics" />
                 <h3>Reliable & On-Time</h3>
                 <p>We ensure your cargo reaches its destination fast and without delays.</p>
             </div>
