--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <!-- Header -->
     <header>
-        <h1>🚛 LG Transport</h1>
+        <h1> LG Transport</h1>
         <nav>
             <a href="#services">Services</a>
             <a href="#contact">Contact</a>
