--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <p>We transport all kinds of goods safely and on time, whether local or long-distance.</p>
             </div>
             <div class="card">
-                <img"20250821_144753-COLLAGE.jpg" alt="Logistics" />
+                <img src="20250821_144753-COLLAGE.jpg" alt="Logistics" />
                 <h3>Reliable & On-Time</h3>
                 <p>We ensure your cargo reaches its destination fast and without delays.</p>
             </div>
