--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                 <p>We ensure your cargo reaches its destination fast and without delays.</p>
             </div>
             <div class="card">
-                <img src="Snapchat-864956916.jpg" alt="Truck Trailer" />
+                <img src="IMG_20250909_151655.jpg" alt="Truck Trailer" />
                 <h3>Professional Service</h3>
                 <p>With years of experience, LG Transport guarantees safe, secure, and affordable deliveries.</p>
             </div>
